--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate",
-    "seed": "ts-node --transpile-only prisma/seed.ts"
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -29,6 +28,7 @@
     "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-currency-input-field": "^3.10.0",
@@ -40,6 +40,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.6",
+    "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
