--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@auth/core": "0.35.3",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.12.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -28,7 +29,7 @@
     "framer-motion": "^12.23.3",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
-    "next-auth": "^4.24.11",
+    "next-auth": "4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-currency-input-field": "^3.10.0",
